add TableController
